<resources>
    <string name="app_name">Actors Demo</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="base_url">http://microblogging.wingnity.com/JSONParsingTutorial/</string>
    <string name="personal_details">Personal Details</string>
    <string name="actor_dob">Born: %1$s</string>
    <string name="actor_country">Country: %1$s</string>
    <string name="actor_height">Height: %1$s</string>
    <string name="actor_spouse">Spouse: %1$s</string>
    <string name="actor_children">Children: %1$s</string>
    <string name="title_activity_actor_details">ActorDetailsActivity</string>
</resources>
