<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sunil.actorsdemo.ui.fragments.ActorDetailsFragment">

    <RelativeLayout
        android:id="@+id/rootView"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/actor_image"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rootView"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/actor_dob"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_dob"/>

        <TextView
            android:id="@+id/actor_country"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_country"/>

        <TextView
            android:id="@+id/actor_height"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_height"/>

        <TextView
            android:id="@+id/actor_spouse"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_spouse"/>

        <TextView
            android:id="@+id/actor_children"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_children"/>

        <TextView
            android:id="@+id/actor_description"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"/>

    </LinearLayout>
</RelativeLayout>
